--- a/app/src/main/res/layout/fragment_discipline_form.xml
+++ b/app/src/main/res/layout/fragment_discipline_form.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment"
-    android:background="@drawable/background_gradient">
+    android:background="@drawable/background_gradient"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
