--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="textField" parent="@style/Widget.Material3.TextInputLayout.OutlinedBox">
+    <style name="textField" >
         <item name="android:layout_margin">@dimen/margin_default</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
+<!--        <item name="android:textColorHint">@color/darkBlue</item>-->
+<!--        <item name="android:textColor">@color/darkBlue</item>-->
+<!--        <item name="hintTextColor">@color/darkBlue</item>-->
+<!--        <item name="startIconTint">@color/darkBlue</item>-->
     </style>
 
     <style name="elevationButton" parent="@style/Widget.Material3.Button.ElevatedButton">
