--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <gradient
-        android:startColor="#91c1cf"
-        android:endColor="#314c59"
+        android:startColor="@color/extraLightBrown"
+        android:endColor="@color/extraLightBrown"
         android:angle="270"/>
 </shape>
