--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,58 +1,55 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.StudentDiary" parent="Theme.Material3.DayNight.NoActionBar">
-         Primary brand color.
+        Primary brand color.
 
-        <item name= "colorOnPrimary">#FFFFFFFF</item>
-        <item name="colorPrimary">#579bb1</item>
+        <item name="colorOnPrimary">#FFFFFFFF</item>
+        <item name="colorPrimary">#594545</item>
         <item name="colorPrimaryVariant">#CA1818</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">#28C728</item>
         <!-- Status bar color. -->
-<!--        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
+        <!--        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
         <!-- Customize your theme here. -->
 
 
-        <item name="colorPrimaryContainer">#396b81</item>
-        <item name="colorOnPrimaryContainer">@color/colorOnPrimaryContainer</item>
-
-
-
         <item name="android:windowTranslucentStatus">true</item>
+
         <item name="android:popupMenuStyle">@style/popupMenuStyle</item>
-<!--        <item name="android:textColor">@color/white</item>-->
 
 
-        colorSecondaryContainer
-        colorOnSurfaceVariant
 
-<!--    </style>-->
-
-
-<!--        <item name="colorSecondaryContainer">#E1D7C6</item>-->
-<!--        <item name="colorOnSecondaryContainer">#3B77CF</item>-->
-<!--        <item name="colorTertiaryContainer">#396b81</item>-->
-<!--        <item name="colorOnTertiaryContainer">#D3BF06</item>-->
-<!--        <item name="colorSurface">#E1D7C6</item>-->
-<!--        <item name="colorOnSurface">#FFFFFF</item>-->
-<!--        <item name="colorOnSurfaceVariant">#FFFFFF</item>-->
-<!--        <item name="colorOutline">#E1D7C6</item>-->
+        <!-- floating action button background -->
+        <item name="colorPrimaryContainer">#594545</item>
+        <!-- floating action button icon -->
+        <item name="colorOnPrimaryContainer">@color/extraLightBrown</item>
 
 
-        <item name="colorSecondaryContainer">#FFFFFF</item>
-        <item name="colorOnSecondaryContainer">#3B77CF</item>
-        <item name="colorTertiaryContainer">#962DC3</item>
-        <item name="colorOnTertiaryContainer">#D3BF06</item>
-        <item name="colorSurface">#E1D7C6</item>
-        <item name="colorOnSurface">#579bb1</item>
-        <item name="colorOnSurfaceVariant">#FFFFFF</item>
-        <item name="colorOutline">#396b81</item>
+        <!--fundo seletor do drawer e do toggle button-->
+        <item name="colorSecondaryContainer">@color/darkBrown</item>
+
+        <!--icone e texto selecionado no drawer e no toggle button-->
+        <item name="colorOnSecondaryContainer">@color/extraLightBrown</item>
+
+        <!--drawer, fundo do time picker, data picker e botões-->
+        <item name="colorSurface">@color/beige</item>
+
+        <!--itens não selecionados no toggle group, titulo do drawer, stroeke e helpertext quando não habilitado, numero time picker, data não selecionada no datepicker-->
+        <item name="colorOnSurface">@color/darkBrown</item>
+
+        <!-- hint text field, subtitulo header drawer, icones não selecionados no drawer, texto timepicker e datapicker  -->
+        <item name="colorOnSurfaceVariant">@color/darkBrown</item>
+
+        <!-- contorno togglebutton e switch -->
+        <item name="colorOutline">@color/darkBrown</item>
+
+        <!-- switch quando não selecionado e textfield quando não habilitado -->
+        <item name="colorSurfaceVariant">#EAE1D2</item>
+
 
     </style>
-
-
 
 
 </resources>
