--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,26 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#D78FB8</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-
-    <color name="secondary">#7f3556</color>
-    <color name="principal">#D78FB8</color>
 
 
-    <color name="colorPrimaryContainer">#7f3556</color>
-    <color name="colorOnPrimaryContainer">#FFFFFF</color>
-
+    <color name="white">#FFFFFF</color>
     <color name="customRed">#B42B51</color>
     <color name="customGreen">#87CBB9</color>
-    <color name="lightBlue">#91c1cf</color>
-    <color name="darkBlue">#396b81</color>
+
+
     <color name="beige">#e0d7c8</color>
     <color name="darkBrown">#594545</color>
     <color name="extraLightBrown">#f5f2f1</color>
+
+    <color name="colorOnPrimary">@color/extraLightBrown</color>
+    <color name="colorPrimary">@color/darkBrown</color>
+    <color name="colorPrimaryVariant">@color/extraLightBrown</color>
+    <color name="colorAccent">@color/extraLightBrown</color>
+    <!-- Secondary brand color. -->
+    <color name="colorSecondary">@color/extraLightBrown</color>
+    <color name="colorSecondaryVariant">@color/extraLightBrown</color>
+    <color name="colorOnSecondary">@color/extraLightBrown</color>
+
+    <!-- floating action button background -->
+    <color name="colorPrimaryContainer">@color/darkBrown</color>
+    <!-- floating action button icon -->
+    <color name="colorOnPrimaryContainer">@color/extraLightBrown</color>
+
+
+    <!--fundo seletor do drawer e do toggle button-->
+    <color name="colorSecondaryContainer">@color/darkBrown</color>
+
+    <!--icone e texto selecionado no drawer e no toggle button-->
+    <color name="colorOnSecondaryContainer">@color/extraLightBrown</color>
+
+    <!--drawer, fundo do time picker, data picker e botões-->
+    <color name="colorSurface">@color/beige</color>
+
+    <!--itens não selecionados no toggle group, titulo do drawer, stroeke e helpertext quando não habilitado, numero time picker, data não selecionada no datepicker-->
+    <color name="colorOnSurface">@color/darkBrown</color>
+
+    <!-- hint text field, subtitulo header drawer, icones não selecionados no drawer, texto timepicker e datapicker  -->
+    <color name="colorOnSurfaceVariant">@color/darkBrown</color>
+
+    <!-- contorno togglebutton e switch -->
+    <color name="colorOutline">@color/darkBrown</color>
+
+    <!-- switch quando não selecionado e textfield quando não habilitado -->
+    <color name="colorSurfaceVariant">@color/beige</color>
+
 
 </resources>
