--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,51 +3,33 @@
     <style name="Theme.StudentDiary" parent="Theme.Material3.DayNight.NoActionBar">
         Primary brand color.
 
-        <item name="colorOnPrimary">#FFFFFFFF</item>
-        <item name="colorPrimary">#594545</item>
-        <item name="colorPrimaryVariant">#CA1818</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">#28C728</item>
-        <!-- Status bar color. -->
-        <!--        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
-        <!-- Customize your theme here. -->
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
 
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <item name="android:windowBackground">@color/colorPrimaryVariant</item>
 
         <item name="android:windowTranslucentStatus">true</item>
 
         <item name="android:popupMenuStyle">@style/popupMenuStyle</item>
 
-
-
-        <!-- floating action button background -->
-        <item name="colorPrimaryContainer">#594545</item>
-        <!-- floating action button icon -->
-        <item name="colorOnPrimaryContainer">@color/extraLightBrown</item>
-
-
-        <!--fundo seletor do drawer e do toggle button-->
-        <item name="colorSecondaryContainer">@color/darkBrown</item>
-
-        <!--icone e texto selecionado no drawer e no toggle button-->
-        <item name="colorOnSecondaryContainer">@color/extraLightBrown</item>
-
-        <!--drawer, fundo do time picker, data picker e botões-->
-        <item name="colorSurface">@color/beige</item>
-
-        <!--itens não selecionados no toggle group, titulo do drawer, stroeke e helpertext quando não habilitado, numero time picker, data não selecionada no datepicker-->
-        <item name="colorOnSurface">@color/darkBrown</item>
-
-        <!-- hint text field, subtitulo header drawer, icones não selecionados no drawer, texto timepicker e datapicker  -->
-        <item name="colorOnSurfaceVariant">@color/darkBrown</item>
-
-        <!-- contorno togglebutton e switch -->
-        <item name="colorOutline">@color/darkBrown</item>
-
-        <!-- switch quando não selecionado e textfield quando não habilitado -->
-        <item name="colorSurfaceVariant">#EAE1D2</item>
-
+        <item name="colorPrimaryContainer">@color/colorPrimaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/colorOnPrimaryContainer</item>
+        <item name="colorSecondaryContainer">@color/colorSecondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/colorOnSecondaryContainer</item>
+        <item name="colorSurface">@color/colorSurface</item>
+        <item name="colorOnSurface">@color/colorOnSurface</item>
+        <item name="colorOnSurfaceVariant">@color/colorOnSurfaceVariant</item>
+        <item name="colorOutline">@color/colorOutline</item>
+        <item name="colorSurfaceVariant">@color/colorSurfaceVariant</item>
 
     </style>
 
