--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,44 +53,38 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_login_textfield_password" />
 
-<!--        <Button-->
-<!--            android:id="@+id/fragment_login_registerButton"-->
-<!--            style="@style/elevationButton"-->
-<!--            android:text="@string/login_fragment_registerButton"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/fragment_login_loginButton"/>-->
-
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/fragment_login_textView_or"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="@dimen/margin_default"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_loginButton"
             android:layout_marginHorizontal="@dimen/defaultTextSize"
-            android:text="@string/common_or"/>
+            android:layout_marginVertical="@dimen/margin_default"
+            android:text="@string/common_or"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_loginButton" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/login_fragment_divider_left_on_textView"
-            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_or"
+            style="@style/dividerStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/small_margin"
             app:layout_constraintBottom_toBottomOf="@id/fragment_login_textView_or"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/fragment_login_textView_or"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/small_margin"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_or" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/login_fragment_divider_right_on_textView"
-            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_or"
+            style="@style/dividerStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_margin"
             app:layout_constraintBottom_toBottomOf="@id/fragment_login_textView_or"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/fragment_login_textView_or"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/small_margin"/>
+            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_or" />
 
 
         <com.google.android.gms.common.SignInButton
@@ -100,66 +94,64 @@
             android:layout_margin="@dimen/margin_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_textView_or"
-            />
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_textView_or" />
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/fragment_login_signin_FacebookButton"
-            android:layout_margin="@dimen/margin_default"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_signin_googleButton"
+            android:layout_margin="@dimen/margin_default"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_signin_googleButton" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/fragment_login_guideline_horizontal_bottom"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_percent="@dimen/fragment_login_guideline_horizontal_bottom_percent"
             android:orientation="horizontal"
-            />
+            app:layout_constraintGuide_percent="@dimen/fragment_login_guideline_horizontal_bottom_percent" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/fragment_login_guideline_vertical_center"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="@dimen/fragment_login_guideline_vertical_center_percent"/>
+            app:layout_constraintGuide_percent="@dimen/fragment_login_guideline_vertical_center_percent" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/fragment_login_divider_bottom"
-            app:layout_constraintTop_toTopOf="@id/fragment_login_guideline_horizontal_bottom"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_login_guideline_horizontal_bottom"
+            style="@style/dividerStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_login_guideline_horizontal_bottom"
+            app:layout_constraintTop_toTopOf="@id/fragment_login_guideline_horizontal_bottom" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/fragment_login_textView_not_have_an_account_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_register"
+            android:text="@string/login_fragment_textView_label_not_have_an_account_question"
+            android:textSize="@dimen/defaultTextSize"
             app:layout_constraintBottom_toBottomOf="@id/fragment_login_textView_register"
             app:layout_constraintEnd_toStartOf="@id/fragment_login_textView_register"
             app:layout_constraintStart_toStartOf="@id/fragment_login_guideline_vertical_center"
-            android:text="@string/login_fragment_textView_label_not_have_an_account_question"
-            android:textSize="@dimen/defaultTextSize"
-           />
+            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_register" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/fragment_login_textView_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/fragment_login_textView_not_have_an_account_question"
-            app:layout_constraintEnd_toEndOf="@id/fragment_login_guideline_vertical_center"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_divider_bottom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@string/login_fragment_textView_label_register"
             android:layout_margin="@dimen/textview_margin_default"
+            android:text="@string/login_fragment_textView_label_register"
+            android:textColor="@color/colorOnSurface"
             android:textSize="@dimen/defaultTextSize"
             android:textStyle="bold"
-            android:textColor="@color/colorOnSurface"
-           />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/fragment_login_guideline_vertical_center"
+            app:layout_constraintStart_toEndOf="@id/fragment_login_textView_not_have_an_account_question"
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_divider_bottom" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
