--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,10 +5,6 @@
         <item name="android:layout_margin">@dimen/margin_default</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-<!--        <item name="android:textColorHint">@color/darkBlue</item>-->
-<!--        <item name="android:textColor">@color/darkBlue</item>-->
-<!--        <item name="hintTextColor">@color/darkBlue</item>-->
-<!--        <item name="startIconTint">@color/darkBlue</item>-->
     </style>
 
     <style name="elevationButton" parent="@style/Widget.Material3.Button.ElevatedButton">
@@ -25,21 +21,10 @@
     <style name="toolbarStyle" parent="Widget.Material3.Toolbar.OnSurface">
         <item name="android:background">@color/extraLightBrown</item>
     </style>
-
-
-<!--    <style name="textviewColorWhite">-->
-<!--        <item name="android:layout_width">0dp</item>-->
-<!--        <item name="android:layout_height">wrap_content</item>-->
-<!--        <item name="android:textColor">@color/white</item>-->
-<!--    </style>-->
-
-<!--    <style name="textviewColorSecondary">-->
-<!--        <item name="android:layout_width">0dp</item>-->
-<!--        <item name="android:layout_height">wrap_content</item>-->
-<!--        <item name="android:textColor">@color/secondary</item>-->
-<!--    </style>-->
-
-
+    
+    <style name="dividerStyle" parent="Widget.Material3.MaterialDivider">
+        <item name="dividerColor">@color/colorOutline</item>
+    </style>
 
     <style name="shapeableImageView">
         <item name="android:layout_width">@dimen/shapeableImageView_default_width</item>
