--- a/app/src/main/res/layout/discipline_form_dialog.xml
+++ b/app/src/main/res/layout/discipline_form_dialog.xml
@@ -27,6 +27,17 @@
             app:layout_constraintBottom_toBottomOf="@id/discipline_form_image_dialog_imageView"
             app:layout_constraintTop_toBottomOf="@id/discipline_form_image_dialog_imageView"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/discipline_form_image_dialog_button_remove"/>
+
+        <Button
+            android:id="@+id/discipline_form_image_dialog_button_remove"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/ic_delete"
+            android:text="@string/discipline_form_image_dialog_button_remove"
+            app:layout_constraintBottom_toBottomOf="@id/discipline_form_image_dialog_button_load"
+            app:layout_constraintTop_toTopOf="@id/discipline_form_image_dialog_button_load"
+            app:layout_constraintStart_toEndOf="@id/discipline_form_image_dialog_button_load"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -37,18 +48,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/discipline_form_image_dialog_button_load"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:startIconDrawable="@drawable/ic_link">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/discipline_form_image_dialog_text_field_hint_url"
                 android:inputType="textUri" />
-
         </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
 </ScrollView>
