--- a/app/src/main/res/layout/discipline_item.xml
+++ b/app/src/main/res/layout/discipline_item.xml
@@ -61,7 +61,7 @@
         app:layout_constraintEnd_toStartOf="@id/disciplineItem_guideline_end"
         app:layout_constraintStart_toEndOf="@id/disciplineItem_guideline_start"
         app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_name"
-        tools:text="14 de fevereiro de 2023 até a de março"
+        tools:text="14 de fevereiro de 2023 até a de março de 2023"
         android:textColor="@color/colorPrimary"/>
 
 
