refatoração MainActivity.kt; adição de nova cor colors.xml;background alterado em discipline_item.xml; remoção de background gradiente em fragment_discipline_form.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="white">#FFFFFF</color>
     <color name="customRed">#B42B51</color>
     <color name="customGreen">#87CBB9</color>
+    <color name="customYellow">#F5E8C7</color>
 
 
     <color name="beige">#e0d7c8</color>
