--- a/app/src/main/res/layout/discipline_item.xml
+++ b/app/src/main/res/layout/discipline_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorSurface">
+    android:background="@color/customYellow">
 
     <TextView
         android:id="@+id/disciplineItem_textView_name"
