--- a/app/src/main/res/layout/fragment_discipline_form.xml
+++ b/app/src/main/res/layout/fragment_discipline_form.xml
@@ -58,6 +58,7 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:text="@string/discipline_form_fragment_addReminder_switch"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/disciplineForm_fragment_imageView" />
