--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_marginTop="@dimen/default_margin_items_header_drawer"
-android:layout_marginStart="@dimen/default_margin_items_header_drawer"
-android:layout_marginEnd="@dimen/default_margin_items_header_drawer"
-android:textSize="@dimen/bigTextSize"
-android:text="@string/app_name" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_margin_items_header_drawer"
+        android:layout_marginTop="@dimen/default_margin_items_header_drawer"
+        android:layout_marginEnd="@dimen/default_margin_items_header_drawer"
+        android:text="@string/app_name"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/bigTextSize" />
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_marginBottom="@dimen/default_margin_items_header_drawer"
-android:layout_marginStart="@dimen/default_margin_items_header_drawer"
-android:layout_marginEnd="@dimen/default_margin_items_header_drawer"
-android:textSize="@dimen/defaultTextSize"
-android:text="@string/header_drawer_subtitle" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_margin_items_header_drawer"
+        android:layout_marginEnd="@dimen/default_margin_items_header_drawer"
+        android:layout_marginBottom="@dimen/default_margin_items_header_drawer"
+        android:text="@string/header_drawer_subtitle"
+        android:textSize="@dimen/defaultTextSize"
+        android:textColor="@color/extraLightBrown"/>
 
-    </LinearLayout>
+</LinearLayout>
