--- a/app/src/main/res/layout/fragment_disciplines.xml
+++ b/app/src/main/res/layout/fragment_disciplines.xml
@@ -65,6 +65,12 @@
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
+    <androidx.appcompat.widget.SearchView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/disciplinesFragment_recyclerView"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/disciplinesFragment_recyclerView"
         android:layout_width="match_parent"
