--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,12 +10,21 @@
     <dimen name="bigTextSize">24sp</dimen>
     <dimen name="defaultTextSize">14sp</dimen>
 
+
+
+    <dimen name="medium_margin">14dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
+
     <dimen name="shapeableImageView_default_width">0dp</dimen>
     <dimen name="shapeableImageView_default_height">80dp</dimen>
     <dimen name="shapeableImageView_default_margin">8dp</dimen>
 
     <dimen name="imageView_big_width">200dp</dimen>
     <dimen name="imageView_big_height">200dp</dimen>
+    <dimen name="imageView_extra_big_width">250dp</dimen>
+    <dimen name="imageView_extra_big_height">250dp</dimen>
+    <dimen name="imageView_medium_width">150dp</dimen>
+    <dimen name="imageView_medium_height">150dp</dimen>
 
     <dimen name="marginTop_textView_student">20dp</dimen>
 
@@ -24,7 +33,7 @@
     <dimen name="default_margin_items_header_drawer">24dp</dimen>
 
     <dimen name="discipline_item_height">130dp</dimen>
-    <dimen name="small_margin">8dp</dimen>
+
 
     <dimen name="discipline_item_guideline_end_percent">0.87</dimen>
     <dimen name="discipline_item_guideline_start_percent">0.23</dimen>
